@@ -50,17 +50,22 @@ void TileSetView::updateView()
     tileywindow = getSurface()->h / tilesize.y;
     scrollpos = 0;
 
-    if(tileycount-tileywindow > 0)
-        SetScrollbar(0, 2, tileycount - tileywindow, getSurface()->h / tilesize.y);
+    if(tileycount - tileywindow > 0) {
+        SetScrollbar(wxVERTICAL, 0, 1, tileycount - tileywindow);
+    } else {
+        SetScrollbar(0, 0, 0, 0);
+    }
 
-    Refresh();
     paintContent();
+    Refresh();
 }
 
 void TileSetView::OnScroll(wxScrollEvent& event)
 {
-    scrollpos = event.GetPosition();
+    scrollpos = GetScrollPos(wxVERTICAL);
+    
     paintContent();
+    Refresh();
 }
 
 void TileSetView::redraw()
@@ -73,14 +78,12 @@ void TileSetView::paintContent()
     if(tileset == 0)
         return;
 
-    std::cout << "Paint TIleset...\n";
-
     SDL_FillRect(getSurface(), 0,
             SDL_MapRGB(getSurface()->format, 255, 255, 255));
     
     size_t tilepos = scrollpos*tilexcount;
     int x=0, y=0;
-    while(tilepos < tileset->getTileCount() && y < tileywindow) {
+    while(tilepos < tileset->getTileCount() && y <= tileywindow) {
         SDL_Surface* surface = tileset->getTile(tilepos);
         SDL_Rect rect;
         rect.x = x*tilesize.x + tileborder.x;
@@ -106,9 +109,7 @@ bool TileSetView::DropTarget::OnDropFiles(wxCoord x, wxCoord y,
         return false;
     }
         
-    std::cout << "Dropped filenames" << std::endl;
     for(size_t i=0; i<filenames.GetCount(); i++) {
-        std::cout << "Filename: " << filenames[i] << std::endl;
         try {
             TemplateCreator* templatecreator 
                 = new TemplateCreator(parentwindow, parentwindow->tileset,
@@ -123,6 +124,5 @@ bool TileSetView::DropTarget::OnDropFiles(wxCoord x, wxCoord y,
 }
 
 BEGIN_EVENT_TABLE(TileSetView, SDLView)
-    EVT_SCROLL_ENDSCROLL(TileSetView::OnScroll)
-    EVT_SCROLL_THUMBRELEASE(TileSetView::OnScroll)
+    EVT_SCROLLWIN(TileSetView::OnScroll)
 END_EVENT_TABLE()
