@@ -32,7 +32,8 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 class IRCLobby;
 class IRCLobbyView;
 
-class NotifyIRCChangeName {
+class NotifyIRCChangeName
+{
 public:
     virtual void changeIRCName(std::string &newname) = 0;
     friend class IRCLobby;
