@@ -1,3 +1,7 @@
+26-Nov-2003 by Matthias Braun
+-made scrolling in tilesetview working correctly
+-template loading and saving in the editor should work now
+
 24-Nov-2003 by Hankin Chick
 -created IRCLobbyServer, so IRCLobby should work by itself.
 -fixed repeatitive mouse move/dragged messages even when mouse didn't move
